resolved company logo not showing issue

--- a/src/scss/Components/_navbar.scss
+++ b/src/scss/Components/_navbar.scss
@@ -13,7 +13,6 @@
     .company-logo {
       width: 209px;
       height: 38px;
-      opacity: 0px;
     }
 
     .nav-links {
